--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "discord.js": "11.4.0",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "youtube-search": "1.1.4"
   }
 }
