--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "discord.js": "11.4.0",
     "request": "2.81.0",
-    "youtube-search": "1.1.4"
+    "ytdl-core": "1.0.3"
   }
 }
