--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "discord.js": "11.4.0",
     "request": "2.81.0",
-    "ytdl-core": "1.0.3"
+    "ytdl-core": "1.0.3",
+    "ffmpeg": "0.0.4"
   }
 }
